<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clHolaMundo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/lbl_hola_mundo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        tools:ignore="MissingConstraints"
        tools:text="Provisional" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="120dp"
        android:text="@string/btm_click_aqui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etcantidad"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:id="@+id/ettotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/lbltotal"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/edt_def_total"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/lbltotal"
        android:labelFor="@+id/ettotal"
        tools:viewBindingIgnore="true"
        app:layout_constraintBottom_toBottomOf="@+id/ettotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ettotal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/lblcantidad"
        tools:viewBindingIgnore="true"
        android:labelFor="@+id/etcantidad"
        app:layout_constraintBottom_toBottomOf="@+id/etcantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etcantidad" />

    <EditText
        android:id="@+id/etcantidad"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/lblcantidad"
        android:ems="10"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:text="@string/edt_def_cantidad"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/ettotal" />

    <Button
        android:id="@+id/btnmas"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/btn_mas"
        app:layout_constraintBottom_toBottomOf="@+id/etcantidad"
        app:layout_constraintStart_toEndOf="@+id/etcantidad"
        app:layout_constraintTop_toTopOf="@+id/etcantidad"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnmenos"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/btn_menos"
        app:layout_constraintBottom_toBottomOf="@+id/btnmas"
        app:layout_constraintStart_toEndOf="@+id/btnmas"
        app:layout_constraintTop_toTopOf="@+id/btnmas"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>